--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,6 +1,12 @@
 plugins {
     id "com.android.application"
-    id "kotlin-android"
+    //id "kotlin-android"
+//    id "org.jetbrains.kotlin.android" version "1.8.22"
+    id "org.jetbrains.kotlin.android" version "2.0.0"
+
+
+    id "com.google.gms.google-services" // Added
+
     // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"
 }
@@ -24,7 +30,8 @@ android {
         applicationId = "com.example.agro_nxt"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = flutter.minSdkVersion
+        //minSdk = flutter.minSdkVersion
+        minSdk = 23
         targetSdk = flutter.targetSdkVersion
         versionCode = flutter.versionCode
         versionName = flutter.versionName
@@ -41,4 +48,12 @@ android {
 
 flutter {
     source = "../.."
+}
+dependencies {
+    // Import the Firebase BoM
+    implementation platform('com.google.firebase:firebase-bom:33.16.0')
+
+    // Add the Firebase dependencies you need
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-auth'
 }
