--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,38 @@
+//allprojects {
+//    repositories {
+//        google()
+//        mavenCentral()
+//    }
+//    dependencies {
+//        // Add the Google services plugin here
+//        classpath 'com.google.gms:google-services:4.4.3'
+//    }
+//}
+//
+//rootProject.buildDir = "../build"
+//subprojects {
+//    project.buildDir = "${rootProject.buildDir}/${project.name}"
+//}
+//subprojects {
+//    project.evaluationDependsOn(":app")
+//}
+//
+//tasks.register("clean", Delete) {
+//    delete rootProject.buildDir
+//}
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        // Add the Google services plugin classpath here
+        classpath 'com.google.gms:google-services:4.4.3'
+        classpath 'com.android.tools.build:gradle:8.2.1'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.22"
+    }
+}
+
 allprojects {
     repositories {
         google()
