--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  easy_localization: ^3.0.1
+  flutter_localizations:
+    sdk: flutter
   flutter:
     sdk: flutter
 
@@ -59,6 +62,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/lang/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
